--- a/connection/tasks/server.yml
+++ b/connection/tasks/server.yml
@@ -4,7 +4,7 @@
     name: '{{ item }}'
     update_cache: yes
     cache_valid_time: 86400
-  with_items: openvpn_packages
+  with_items: "{{ openvpn_packages }}"
 
 - name: server | store key
   copy:
